fix: too light top corners on A2FLogin PopUp, Root.jsx now use LF

--- a/src/components/Login/A2FLogin.css
+++ b/src/components/Login/A2FLogin.css
@@ -9,6 +9,7 @@
     text-align: center;
     padding: 20px;
     background-color: rgb(var(--background-color-0), .5);
+    border-radius: 20px 20px 0 0;
     /* margin-bottom: 20px; */
 }
 
